Add another commit to kick off workflow

--- a/source/sdk/node/install.txt
+++ b/source/sdk/node/install.txt
@@ -79,8 +79,7 @@ Realm Node.js SDK to it.
       type checking and other features intended to make
       application-scale development more robust. If you'd like
       to use TypeScript, follow the TypeScript team's official
-      `Node Starter guide
-      <https://github.com/Microsoft/TypeScript-Node-Starter#typescript--node>`__.
+      Node Starter guide.
       Realm supports TypeScript natively and integrates easily
       into a TypeScript project.
 
