Minor edit for testing.

--- a/source/sdk/swift/install.txt
+++ b/source/sdk/swift/install.txt
@@ -354,4 +354,4 @@ Troubleshooting
 
 If you have build issues after using one of these methods to install 
 Realm, see :ref:`our troubleshooting guidelines <ios-resolve-build-issues>` 
-for information about resolving those issues realm.
+for information about resolving those issues in realm.
