--- a/source/sdk/node/install.txt
+++ b/source/sdk/node/install.txt
@@ -123,7 +123,7 @@ running Raspberry Pi OS (formerly Raspbian), follow the steps below:
    .. step:: Install Realm with NPM
 
 
-      In your Node.js project directory, use the following command
+      In your Node.js project directory use the following command
       to add Realm to your project:
 
       .. code-block:: bash
